--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "mongoose-validator": "^2.1.0",
+    "nodemailer": "^6.7.1",
     "nodemon": "^2.0.15",
     "request": "^2.88.2",
     "validator": "^13.7.0"
